--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,58 @@
-
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+}
+.fields-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 30px;
+  background-color: blueviolet;
+  border-radius: 12px;
+  padding: 20px;
+}
+.fields-container input {
+  padding: 4px 8px;
+  border-radius: 4px;
+  outline: none;
+}
+.fields-container button {
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+}
+.fields-container button:hover {
+  background-color: rgba(255, 0, 0, 0.8)
+}
+.buttons-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color:darkcyan;
+  padding: 10px;
+  border-radius: 4px;
+}
+.buttons-container button {
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: none;
+  background-color:crimson;
+  color: white;
+  cursor: pointer;
+}
+.buttons-container button:hover{
+  background-color:tomato;
+}
